syntax = "proto3";

package com.coralogix.extensions.v1;

import "com/coralogix/common/v1/audit_log.proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/descriptor.proto";
import "google/api/annotations.proto";

service QuotaService {
  rpc GetQuotas(GetQuotasRequest) returns (GetQuotasResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "Get quotas for various extension domains";
    option (google.api.http) = {
      get: "/quota/v1/quotas"
    };
  }
}

message GetQuotasRequest {}

message GetQuotasResponse {
  message Usage {
    google.protobuf.Int32Value used = 1;
    google.protobuf.Int32Value limit = 2;
  }

  message Events2MetricsUsage {
    google.protobuf.Int32Value labels_limit = 1;
    Usage permutations = 2;
    Usage metrics = 3;
  }

  google.protobuf.StringValue company_id = 1;
  Usage alert = 2;
  Usage enrichment = 3;
  Usage parsing_rule = 4;
  Usage parsing_rule_group = 5;
  Usage parsing_theme = 6;
  Usage dynamic_alert = 7;
  Events2MetricsUsage events_2_metrics = 8;
}
