syntax = "proto3";

package com.coralogixapis.events2metrics.v2;

import "com/coralogixapis/logs2metrics/v2/logs_query.proto";
import "com/coralogixapis/spans2metrics/v2/spans_query.proto";
import "google/protobuf/wrappers.proto";
import "com/coralogix/openapi/v1/annotations.proto";
// Enum defining e2m type
enum E2MType {
  E2M_TYPE_UNSPECIFIED = 0;
  E2M_TYPE_LOGS2METRICS = 1;
  E2M_TYPE_SPANS2METRICS = 2;
}
// E2M represents the Event to metrics base model.
message E2M {
  option (com.coralogix.openapi.v1.message) = {
    name: "Event2Metric",
    description: "Event2Metric model"
  };
  //E2M id, required on update requests
  google.protobuf.StringValue id = 1 [ (com.coralogix.openapi.v1.field) = {
   format : "uuid",
   min_length : 36,
   max_length : 36,
   example : "\"d6a3658e-78d2-47d0-9b81-b2c551f01b09\"",
   pattern : "^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$",
   description: "E2M unique id"
  } ];
  // E2M name
  google.protobuf.StringValue name = 2 [ (com.coralogix.openapi.v1.field) = {
    required : true,
    example : "\"Service_catalog_latency\""
  } ];
  // E2m description
  google.protobuf.StringValue description = 3 [ (com.coralogix.openapi.v1.field) = {
    example : "\"avg and max the latency of catalog service\"",
  } ];
  // E2M create time
  google.protobuf.StringValue create_time = 4 [ (com.coralogix.openapi.v1.field) = {
    description : "e2m create time",
    example: "\"2022-06-30T12:30:00Z'\""
  } ];
  // E2M update time
  google.protobuf.StringValue update_time = 5 [ (com.coralogix.openapi.v1.field) = {
    description : "e2m update time",
    example: "\"2022-06-30T12:30:00Z'\""
  } ];
  // represents E2M permutations limit
  E2MPermutations permutations = 6 [ (com.coralogix.openapi.v1.field) = {
    description : "represents the limit of the permutations and if the limit was exceeded"
  } ];
  // E2M metric labels
  repeated MetricLabel metric_labels = 7 [ (com.coralogix.openapi.v1.field) = {
    required : false,
    description : "e2m metric labels"
  } ];
  // E2M metric fields
  repeated MetricField metric_fields = 8 [ (com.coralogix.openapi.v1.field) = {
    description : "e2m metric fields",
    max_items: 10
  } ];
  // E2M type logs2metrics/spans2metrics
  E2MType type = 9 [ (com.coralogix.openapi.v1.field) = {
    required : true,
    description : "e2m type"
  } ];
  // spans or logs type query
  oneof query {
    //spans query
    com.coralogixapis.spans2metrics.v2.SpansQuery spans_query = 10 [ (com.coralogix.openapi.v1.field) = {
      description : "e2m span query"
    } ];
    // logs query
    com.coralogixapis.logs2metrics.v2.LogsQuery logs_query = 11 [ (com.coralogix.openapi.v1.field) = {
      description : "e2m logs query"
    } ];
  }
  // a flag that represents if the e2m is for internal usage
  google.protobuf.BoolValue is_internal = 12;
}
// E2M Create message
message E2MCreateParams {
  option (com.coralogix.openapi.v1.message) = {
    name: "Event2MetricPrototype"
    description: "Event2Metric to create"
  };

  // e2m create name
  google.protobuf.StringValue name = 1 [ (com.coralogix.openapi.v1.field) = {
    required : true
    example : "\"Service catalog latency\""
  } ];
  // e2m description
  google.protobuf.StringValue description = 2 [ (com.coralogix.openapi.v1.field) = {
    example : "\"avg and max the latency of catalog service\""
  } ];
  // permutation limit
  google.protobuf.Int32Value permutations_limit = 3;
  // e2m metric labels
  repeated MetricLabel metric_labels = 4;
  // e2m metric fields
  repeated MetricField metric_fields = 5;
  // e2m type
  E2MType type = 6;
  // spans or logs query type
  oneof query {
    // spans query
    com.coralogixapis.spans2metrics.v2.SpansQuery spans_query = 7 [ (com.coralogix.openapi.v1.field) = {
      description : "e2m span query",
    } ];
    // logs query
    com.coralogixapis.logs2metrics.v2.LogsQuery logs_query = 8 [ (com.coralogix.openapi.v1.field) = {
      description : "e2m logs query",
    } ];
  }
}
// represents e2m permutation limit
message E2MPermutations {
  // e2m permutation limit
  int32 limit = 1 [ (com.coralogix.openapi.v1.field) = {
    description : "e2m permutation limit",
  } ];
  // flag to indicate if limit was exceeded
  bool has_exceeded_limit = 2 [ (com.coralogix.openapi.v1.field) = {
    description : "has exceeded limit",
  } ];
}
// e2m metric label
message MetricLabel {
  // metric label target label
  google.protobuf.StringValue target_label = 1 [ (com.coralogix.openapi.v1.field) = {
    description : "metric label target label",
    pattern: "/^[\\w/-]+$/"
  } ];
  // metric label source field
  google.protobuf.StringValue source_field = 2 [ (com.coralogix.openapi.v1.field) = {
    description : "metric label source field",
  } ];
}
//e2m metric field
message MetricField {
  google.protobuf.StringValue target_base_metric_name = 1 [ (com.coralogix.openapi.v1.field) = {
    pattern: "/^[\\w/-]+$/"
  } ];
  // source field
  google.protobuf.StringValue source_field = 2;
  // represents Aggregation type list
  repeated Aggregation aggregations = 7;
}
// e2m aggregation
message Aggregation {
  // enum - aggregation type
  enum AggType {
    AGG_TYPE_UNSPECIFIED = 0;
    AGG_TYPE_MIN = 1;
    AGG_TYPE_MAX = 2;
    AGG_TYPE_COUNT = 3;
    AGG_TYPE_AVG = 4;
    AGG_TYPE_SUM = 5;
    AGG_TYPE_HISTOGRAM = 6;
    AGG_TYPE_SAMPLES = 7;
  }
  // is enabled
  bool enabled = 1;
  // aggregation type
  AggType agg_type = 2;
  // target metric field
  string target_metric_name = 3;
  // aggregate metadata, samples or histogram type
  oneof agg_metadata {
    // e2m sample type metadata
    E2MAggSamples samples = 4;
    // e2m aggregate histogram type metadata
    E2MAggHistogram histogram = 5 [ (com.coralogix.openapi.v1.field) = {
      description : "e2m aggregate histogram type metadata",
      required: true,
      min_items: 1
    } ];
  }
}
// e2m aggregate sample type
message E2MAggSamples {
  // enum of aggregate type
  enum SampleType {
    SAMPLE_TYPE_UNSPECIFIED = 0;
    SAMPLE_TYPE_MIN = 1;
    SAMPLE_TYPE_MAX = 2;
  }
  // sample type min/max
  SampleType sample_type = 2;
}
 // represents the e2m aggregate histogram
message E2MAggHistogram {
  // buckets that describe the e2m
  repeated float buckets = 1;
}
